# vector-bin-packing

./: CMakeLists.txt  README.md
src/algorithms/: best_fit.cpp  best_fit.h  bin_centric.cpp  bin_centric.h  first_fit.cpp  first_fit.h  my.cpp  my.h  next_fit.cpp  next_fit.h  solver.h  worst_fit.cpp  worst_fit.h
src/tests/large/: main.cpp
src/tests/my/: main.cpp
src/tests/small/: main.cpp
src/tests/triplets/: main.cpp
src/tests/utils/: utils.cpp  utils.h
